styles/common.css
*
{
    margin: 0;
    padding: 0;
    text-decoration: none;
    font-weight: normal;
}

strong
{
    font-weight: bold;
}

body
{
    display: flex;
    align-items: center;
    flex-direction: column;
    background-color: #707070;
    background-image: url('/images/rubber_grip.png');
    background-repeat: repeat;
    font-family: Arial, Helvetica, Sans-Serif;
    font-size: 14px;
}

    body a
    {
        color: #0000c6;
    }

        body a:hover
        {
            text-decoration: underline;
        }

        body a:visited
        {
            color: #3000a6;
        }


    body > *
    {
        width: 700px;
        box-sizing: border-box;
        box-shadow: 12px 12px 8px #151515;
    }

    body > header
    {
        height: 185px;
        margin-top: 20px;
        background-color: #608fbb;
        background-image: url('/images/ptarmigan.jpg');
        background-position: left top;
    }

        body > header > a
        {
            display: block;
            width: 100%;
            height: 100%;
        }

        body > header span
        {
            display: block;
            transform: translateY(149px);
            margin-right: 4px;
            font-size: 30px;
            color: #ffffff;
            text-align: right;
        }

        body > header > a
        {
            background-color: rgba(0,0,0,0);
            transition: linear 350ms;
        }

            body > header > a:hover
            {
                background-color: rgba(0,0,128,0.4);
                transition: linear 350ms;
            }

                body > header > a:hover > span
                {
                    text-decoration: underline;
                }

    body > aside
    {
        padding: 24px 16px 8px 16px;
        background-color: #ffffff;
        color: #333333;
    }

        body > aside > header > h1
        {
            display: none;
        }

        body > aside > content > p
        {
            font-size: 1em;
        }

    body > article
    {
        padding: 24px 16px 18px 16px;
        background-color: #ffffff;
        color: #333333;
    }

        body > article + article
        {
            padding-top: 0px;
        }

        body > article > header
        {
            display: flex;
            flex-flow: row nowrap;
            justify-content: space-between;
            margin-bottom: 6px;
        }

            body > article > header h1
            {
                margin-right: 10px;
                font-size: 2em;
            }

            body > article > header > a,
            body > article > header > h1
            {
                flex-grow: 1;
                order: 1;
            }

            body > article > header > h1
            {
                margin-bottom: 8px;
            }

            body > article > header > time.published
            {
                margin-top: 4px;
                white-space: nowrap;
                order: 2;
            }

            body > article > header > time.modified
            {
                margin-top: 4px;
                white-space: nowrap;
                order: 3;
            }

                body > article > header > time.modified::before {
                    content: ' (upd. ';
                }

                body > article > header > time.modified::after {
                    content: ')';
                }

        body > article > content > *
        {
            font-size: 1em;
            margin-bottom: 8px;
        }

        body > article > content > aside
        {
            padding: 0 10px 0 10px;
            margin-top: 12px;
            margin-bottom: 0;
            border: 1px solid blue;
            background-color: rgb(245,245,255);
        }

            body > article > content > aside > *
            {
                font-size: 1em;
                margin-bottom: 8px;
            }

            body > article > content > aside > h3
            {
                color: black;
                margin-top: 6px;
                font-size: 1.35em;
            }

            body > article > content > aside > p:first-child {
                margin-top: 12px;
            }

        body > article > content h2
        {
            color: black;
            margin-top: 24px;
            font-size: 1.5em;
        }

        body > article > content p em
        {
            color: black;
        }

        body > article > content ol,
        body > article > content ul
        {
            padding-left: 20px;
        }

        body > article > content img
        {
            display: block;
            margin-left: auto;
            margin-right: auto;
        }

            body > article > content img.left-aligned
            {
                margin-left: 0;
            }

        body > article > content table
        {
            border-collapse: collapse;
        }

            body > article > content table td
            {
                border: 1px solid gray;
                padding: 2px 6px;
            }

        body > article > content pre
        {
            font-size: 12px;
            padding: 3px 5px;
            overflow-x: auto;
            background-color: rgb(245,245,245);
        }

            body > article > content pre > code
            {
                display: block;
            }

            body > article > content pre.code-header
            {
                color: black;
                letter-spacing: 1px;
                margin-bottom: 0;
                border-bottom: 1px dotted rgb(205,205,205);
            }

                body > article > content pre.code-header + pre
                {
                    padding-top: 8px;
                }

        body > * > footer
        {
            display: flex;
            flex-flow: row nowrap;
            justify-content: space-between;
        }

            body > * > footer > .comment
            {
                margin-top: 9px;
                white-space: nowrap;
                text-align: left;
                font-size: 1em;
                color: #909090;
                order: 1;
            }

                body > * > footer > .comment:hover
                {
                    color: #0000c6;
                }

            body > * > footer > .author
            {
                margin-top: 9px;
                white-space: nowrap;
                text-align: right;
                font-size: 1em;
                order: 2;
            }

    body > footer
    {
        height: 5px;
        margin-bottom: 80px;
        background-color: #555555;
    }

@media screen and (max-width: 700px)
{
    body > *
    {
        width: 100%;
        min-width: 400px;
    }

    body > header
    {
        margin-top: 0;
    }

    body > article > header > a,
    body > article > header > h1 {
        width: 100%;
    }

    body > article > content img
    {
        max-width: 100%;
    }
}

@media screen and (max-width: 650px) {
    body > article > header {
        flex-flow: row wrap;
        justify-content: right;
    }
}

@media screen and (min-resolution: 2dppx)
{
    body
    {
        font-size: 16px;
    }

        body > *
        {
            width: 100%;
            min-width: 400px;
        }

        body > header
        {
            margin-top: 0;
        }

        body > article > header {
            flex-flow: row wrap;
            justify-content: right;
        }
}

